# admin-bot-teams

./: pyproject.toml
adm/: admin.py  apps.py  handler.py  models.py  views.py
adm_bot_teams/: manage.py
adm_bot_teams/adm/: models.py  urls.py
adm_bot_teams/adm_bot_teams/: asgi.py  settings.py  urls.py  wsgi.py
adm_bot_teams/static/assets/js/: dashboard.js
adm_bot_teams/templates/: authentication-login.html  base.html  criar_mensagem.html  criar_proative_message.html  edit_config.html  index.html  mensagens_cadastradas.html
