[tool.poetry]
name = "interface-chat-bot-django"
version = "0.1.0"
description = ""
authors = ["Ewald Werner Junior <junior.werner@somosagility.com.br>"]
readme = "README.md"
packages = [{include = "interface_chat_bot_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.0"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
